# pytorch-partial-tagger

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pypi-publish.yml
docs/: .readthedocs.yaml
docs/source/: conf.py  index.rst  quick_start.md  reference.rst
docs/source/reference/: partial_tagger.crf.functional.rst  partial_tagger.crf.nn.rst  partial_tagger.crf.rst  partial_tagger.data.batch.tag.rst  partial_tagger.data.batch.text.rst  partial_tagger.data.collators.rst  partial_tagger.data.rst  partial_tagger.decoders.rst  partial_tagger.encoders.rst  partial_tagger.recognizer.rst  partial_tagger.tagger.rst  partial_tagger.training.rst
notebooks/: basic.ipynb
src/partial_tagger/: embedders.py  matchers.py  metric.py  recognizer.py  tagger.py  training.py  utils.py
src/partial_tagger/crf/: __init__.py  core.py  functional.py  nn.py  semiring.py
src/partial_tagger/data/: __init__.py  batch.py  collators.py  core.py
src/partial_tagger/data/batch/: __init__.py  core.py  tag.py  text.py
src/partial_tagger/decoders/: __init__.py  viterbi.py
src/partial_tagger/encoders/: __init__.py  base.py  linear.py  transformer.py
tests/: conftest.py  helpers.py  test_matchers.py  test_metric.py  test_recognizer.py
tests/crf/: test_core.py  test_functional.py  test_nn.py
tests/data/: test_batch.py  test_collators.py  test_core.py
tests/data/batch/: conftest.py  test_tag.py  test_text.py
