[project]
name = "pytorch-partial-tagger"
description = "Sequence Tagger for Partially Annotated Dataset in PyTorch"
authors = [
    {name = "Yasufumi Taniguchi", email = "yasufumi.taniguchi@gmail.com"},
]
dependencies = [
    "transformers>=4.29.2",
    "torch>=2.0.1",
    "spacy>=3.5.3",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.3.1",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.270",
    "black>=23.3.0",
    "mypy>=1.3.0",
]
docs = [
    "sphinx>=6.2.1",
    "sphinx-book-theme>=1.0.1",
    "myst-parser>=2.0.0",
    "sphinx-copybutton>=0.5.2",
]

[project.urls]
Homepage = "https://github.com/yasufumy/pytorch-partial-tagger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partial_tagger"]

[tool.hatch.version]
path = "src/partial_tagger/__about__.py"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "C",  # flake8-comprehensions
  "B",  # flake8-bugbear
]
src = ["src"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = ["src"]
